catkin_ws/logs/iq_gnc/build.make.006.log.stderr
In file included from /opt/ros/noetic/include/ros/ros.h:40,
                 from /home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:9,
                 from /home/mario/catkin_ws/src/iq_gnc/src/sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/src/sub.cpp: In function ‘void drone1_pos_cb(const ConstPtr&)’:
/home/mario/catkin_ws/src/iq_gnc/src/sub.cpp:21:57: error: expected ‘)’ before ‘drone1_x’
   21 |  ROS_INFO("Drone1 local position: x: %s , y: %s, z: %s" drone1_x.c_str(), drone1_y.c_str(), drone1_z.c_str());
      |                                                         ^~~~~~~~
/opt/ros/noetic/include/ros/console.h:351:165: note: in definition of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                                                                                                                                                                     ^~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/sub.cpp:21:2: note: in expansion of macro ‘ROS_INFO’
   21 |  ROS_INFO("Drone1 local position: x: %s , y: %s, z: %s" drone1_x.c_str(), drone1_y.c_str(), drone1_z.c_str());
      |  ^~~~~~~~
/opt/ros/noetic/include/ros/console.h:351:26: note: to match this ‘(’
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                          ^
/opt/ros/noetic/include/ros/console.h:354:5: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  354 |     ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER(NULL, __VA_ARGS__)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/sub.cpp:21:2: note: in expansion of macro ‘ROS_INFO’
   21 |  ROS_INFO("Drone1 local position: x: %s , y: %s, z: %s" drone1_x.c_str(), drone1_y.c_str(), drone1_z.c_str());
      |  ^~~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/sub.cpp:21:84: error: request for member ‘c_str’ in ‘drone1_y’, which is of non-class type ‘float’
   21 |  ROS_INFO("Drone1 local position: x: %s , y: %s, z: %s" drone1_x.c_str(), drone1_y.c_str(), drone1_z.c_str());
      |                                                                                    ^~~~~
/opt/ros/noetic/include/ros/console.h:351:165: note: in definition of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                                                                                                                                                                     ^~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/sub.cpp:21:2: note: in expansion of macro ‘ROS_INFO’
   21 |  ROS_INFO("Drone1 local position: x: %s , y: %s, z: %s" drone1_x.c_str(), drone1_y.c_str(), drone1_z.c_str());
      |  ^~~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/sub.cpp:21:102: error: request for member ‘c_str’ in ‘drone1_z’, which is of non-class type ‘float’
   21 |  ROS_INFO("Drone1 local position: x: %s , y: %s, z: %s" drone1_x.c_str(), drone1_y.c_str(), drone1_z.c_str());
      |                                                                                                      ^~~~~
/opt/ros/noetic/include/ros/console.h:351:165: note: in definition of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                                                                                                                                                                     ^~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/sub.cpp:21:2: note: in expansion of macro ‘ROS_INFO’
   21 |  ROS_INFO("Drone1 local position: x: %s , y: %s, z: %s" drone1_x.c_str(), drone1_y.c_str(), drone1_z.c_str());
      |  ^~~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/sub.cpp: In function ‘int main(int, char**)’:
/home/mario/catkin_ws/src/iq_gnc/src/sub.cpp:58:17: error: ‘controlnode’ was not declared in this scope
   58 |     drone1Pos = controlnode.subscribe<nav_msgs::Odometry>(("/drone1/mavros/local_position/pose").c_str(), 10, drone1_pos_cb);
      |                 ^~~~~~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/sub.cpp:58:57: error: expected primary-expression before ‘>’ token
   58 |     drone1Pos = controlnode.subscribe<nav_msgs::Odometry>(("/drone1/mavros/local_position/pose").c_str(), 10, drone1_pos_cb);
      |                                                         ^
/home/mario/catkin_ws/src/iq_gnc/src/sub.cpp:58:98: error: request for member ‘c_str’ in ‘("/drone1/mavros/local_position/pose")’, which is of non-class type ‘const char [35]’
   58 |     drone1Pos = controlnode.subscribe<nav_msgs::Odometry>(("/drone1/mavros/local_position/pose").c_str(), 10, drone1_pos_cb);
      |                                                                                                  ^~~~~
make[2]: *** [CMakeFiles/sub.dir/build.make:63: CMakeFiles/sub.dir/src/sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:433: CMakeFiles/sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
